# ct-assignment

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
docs/: found_bugs.md  on_performance_testing.md  strategy_and_improvements.md
libs/api_sdk/: pyproject.toml
libs/api_sdk/src/: api_sdk_README.md
libs/api_sdk/src/.openapi-generator/: FILES
libs/api_sdk/src/api_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
libs/api_sdk/src/api_sdk/api/: __init__.py  timestamp_api.py
libs/api_sdk/src/api_sdk/docs/: ConvertTimestamp200Response.md  ConvertTimestampSParameter.md  TimestampApi.md
libs/api_sdk/src/api_sdk/models/: __init__.py  convert_timestamp200_response.py  convert_timestamp_s_parameter.py
libs/api_sdk/src/api_sdk/test/: test_convert_timestamp200_response.py  test_convert_timestamp_s_parameter.py  test_timestamp_api.py
utils/: generate-api-client.sh
