[project]
name = "timestamp-converter"
version = "0.1.0"
description = "Timestamp converter assignment and test suite for the CT QA engineer role"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "dhaustein"},
]

dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "mypy>=1.18.0",
]

[tool.uv.sources]
api = { workspace = true }
api_sdk = { workspace = true }
frontend = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/api",
    "packages/frontend",
    "libs/api_sdk",
]

[tool.uv]
dev-dependencies = [
    "api",
    "frontend",
    "api_sdk",
]
# root package itself is not intended to be installed
package = false

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  ".eggs",
  ".git",
  ".venv",
  "build",
  "dist",
  "notebooks",
  ".cache",
  "libs/api_sdk"
]
line-length = 120

[tool.mypy]
python_version = "3.13"
packages = ["packages"]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "libs/api_sdk",
]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[tool.pyright]
exclude = [".venv", ".github", "docs", "tests", ".devcontainer"]
include = ["packages", "libs"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
